Fix extra padding on ndc country page

--- a/app/javascript/app/pages/ndc-country/ndc-country-styles.scss
+++ b/app/javascript/app/pages/ndc-country/ndc-country-styles.scss
@@ -1,11 +1,5 @@
 @import '~styles/layout.scss';
 
-.page {
-  @media #{$mobile-only} {
-    padding-top: $navbar-height;
-  }
-}
-
 .anchorNav {
   @include row('shrink', $wrap: false);
 }
